feat(#41) : 차량 상세 정보 업데이트