@@ -1,20 +1,22 @@
 package com.hexacore.tayo.car;
 
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.model.ObjectMetadata;
+import com.amazonaws.services.s3.model.PutObjectRequest;
 import com.hexacore.tayo.car.model.*;
 import com.hexacore.tayo.common.DataResponseDto;
-import com.hexacore.tayo.common.ResponseCode;
 import com.hexacore.tayo.common.ResponseDto;
 import com.hexacore.tayo.common.errors.ErrorCode;
 import com.hexacore.tayo.common.errors.GeneralException;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import com.hexacore.tayo.user.model.UserEntity;
 import jakarta.transaction.Transactional;
 import java.io.IOException;
-import java.util.List;
+import java.util.stream.IntStream;
+
 import lombok.RequiredArgsConstructor;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.GeometryFactory;
@@ -30,51 +32,11 @@ public class CarService {
 
     private final CarRepository carRepository;
     private final ImageRepository imageRepository;
-
-    /* 차량 정보 조회 */
-    public DataResponseDto carDetail(Long carId) {
-        CarEntity car = carRepository.findById(carId)
-                // 차량 조회가 안 되는 경우
-                .orElseThrow(() -> new GeneralException(ResponseCode.NOT_FOUND, "존재하지 않는 id입니다"));
-        List<String> images = carDateList(carId);
-        return DataResponseDto.of(new CarDto(car,images));
-    }
-
-    /* 차량 정보 수정 */
-    public ResponseDto carUpdate(Long carId, CarUpdateDto carUpdateDto){
-        CarEntity car = carRepository.findById(carId)
-                // 차량 조회가 안 되는 경우
-                .orElseThrow(() -> new GeneralException(ResponseCode.NOT_FOUND, "존재하지 않는 id입니다"));
-        car.setFeePerHour(carUpdateDto.getFeePerHour());
-        car.setAddress(carUpdateDto.getAddress());
-        car.setPosition(carUpdateDto.getPosition().toEntity());
-        car.setDescription(carUpdateDto.getDescription());
-        
-       //updateImage(carId,carUpdateDto.getImageUrls());
-
-        return ResponseDto.success(ResponseCode.OK, "차량 수정이 완료되었습니다.");
-    }
-
-    /* 에약 가능 날짜 조회 */
-    private List<String> carDateList(Long carId){
-        return imageRepository.findAllByCar_IdAndIsDeletedFalseOrderByOrderIdxAsc(carId)
-                .stream()
-                .map(ImageEntity::getUrl)
-                .collect(Collectors.toList());
     private final ModelRepository modelRepository;
-    private final ImageRepository imageRepository;
     private final AmazonS3 amazonS3Client;
 
     @Value("${cloud.aws.s3.bucket}")
     private String bucket;
-
-    /* 모델, 세부 모델명 조회 */
-    public ResponseDto getCategories() {
-        List<CategoryDto> models = modelRepository.findAll().stream()
-                .map(CategoryDto::new)
-                .toList();
-        return DataResponseDto.of(new CategoryListDto(models));
-    }
 
     /* 차량 등록 */
     @Transactional
@@ -114,7 +76,7 @@ public class CarService {
             car.setDescription(postCarDto.getDescription());
             car.setIsDeleted(false);
             // 이미지 저장
-            saveImages(postCarDto.getImages(), car);
+            saveImages(postCarDto.getImageIndexes(),postCarDto.getImageFiles(), car);
         } else {
             // 유저가 이전에 등록한 같은 번호의 차가 없는 경우 CREATE
             CarEntity carEntity = CarEntity.builder()
@@ -134,11 +96,84 @@ public class CarService {
 
             carRepository.save(carEntity);
             // 이미지 저장
-            saveImages(postCarDto.getImages(), carEntity);
+            saveImages(postCarDto.getImageIndexes(),postCarDto.getImageFiles(), carEntity);
         }
 
         return ResponseDto.success(HttpStatus.CREATED);
     }
+
+    /* 차량 정보 조회 */
+    public DataResponseDto carDetail(Long carId) {
+        CarEntity car = carRepository.findById(carId)
+                // 차량 조회가 안 되는 경우
+                .orElseThrow(() -> new GeneralException(ErrorCode.CAR_NOT_FOUND));
+        List<String> images = carDateList(carId);
+        return DataResponseDto.of(new CarDto(car,images));
+    }
+
+    /* 차량 정보 수정 */
+    @Transactional
+    public ResponseDto carUpdate(Long carId, CarUpdateDto carUpdateDto){
+        CarEntity car = carRepository.findById(carId)
+                // 차량 조회가 안 되는 경우
+                .orElseThrow(() -> new GeneralException(ErrorCode.CAR_NOT_FOUND));
+        car.setFeePerHour(carUpdateDto.getFeePerHour());
+        car.setAddress(carUpdateDto.getAddress());
+        car.setPosition(carUpdateDto.getPosition().toEntity());
+        car.setDescription(carUpdateDto.getDescription());
+        
+       saveImages(carUpdateDto.getImageIndexes(),carUpdateDto.getImageFiles(), car);
+
+        return ResponseDto.success(HttpStatus.OK);
+    }
+
+    /* 차량 삭제 */
+    @Transactional
+    public ResponseDto deleteCar(Long carId) {
+        // 차량 isDeleted = true
+        CarEntity car = carRepository.findById(carId)
+                .orElseThrow(() -> new GeneralException(ErrorCode.CAR_NOT_FOUND));
+        car.setIsDeleted(true);
+        carRepository.save(car);
+
+        // 이미지 isDeleted = true
+        imageRepository.findByCar_Id(car.getId()).forEach((image) -> {
+            image.setIsDeleted(true);
+            imageRepository.save(image);
+        });
+
+        return ResponseDto.success(HttpStatus.OK);
+    }
+
+    /* 에약 가능 날짜 조회 */
+    private List<String> carDateList(Long carId) {
+        return imageRepository.findAllByCar_IdAndIsDeletedFalseOrderByOrderIdxAsc(carId)
+                .stream()
+                .map(ImageEntity::getUrl)
+                .collect(Collectors.toList());
+    }
+
+    /* 예약 가능 날짜 수정 */
+    public ResponseDto updateDates(Long carId, DateListDto dateListDto) {
+        CarEntity car = carRepository.findById(carId)
+                // 차량 조회가 안 되는 경우
+                .orElseThrow(() -> new GeneralException(ErrorCode.CAR_NOT_FOUND));
+
+        car.setDates(dateListDto.getDates());
+        carRepository.save(car);
+
+        return ResponseDto.success(HttpStatus.ACCEPTED);
+    }
+
+    /* 모델, 세부 모델명 조회 */
+    public ResponseDto getCategories() {
+        List<CategoryDto> models = modelRepository.findAll().stream()
+                .map(CategoryDto::new)
+                .toList();
+        return DataResponseDto.of(new CategoryListDto(models));
+    }
+
+
 
     /* 경도와 위도 값을 Point 객체로 변환 */
     private Point createPoint(PositionDto positionDto) {
@@ -148,22 +183,37 @@ public class CarService {
     }
 
     /* 이미지 엔티티 저장 */
-    private void saveImages(List<MultipartFile> images, CarEntity carEntity) {
-        List<String> urls = images.stream()
-                .map(this::uploadImage)
-                .toList();
+    private void saveImages(List<Integer> indexes,List<MultipartFile> files, CarEntity carEntity) {
+        List<Map<String, Object>> datas = IntStream.range(0, Math.min(indexes.size(), files.size()))
+                .mapToObj(i -> {
+                    String url = uploadImage(files.get(i));
+                    Object index = indexes.get(i);
+                    return Map.of("index", index, "url", url);
+                })
+                .collect(Collectors.toList());
 
-        if (urls.size() < 5) {
-            throw new GeneralException(ErrorCode.CAR_IMAGE_INSUFFICIENT);
-        }
+        for (Map<String,Object> data : datas) {
+            int idx = (int) data.get("index");
+            String url = (String) data.get("url");
 
-        for (int idx = 0; idx < urls.size(); idx++) {
-            String url = urls.get(idx);
-            ImageEntity imageEntity = ImageEntity.builder()
+            Optional<ImageEntity> optionalImage = imageRepository.findByCar_IdAndOrderIdxAndIsDeletedFalse(carEntity.getId(),idx);
+            ImageEntity imageEntity;
+            //인덱스가 idx인 image가 존재하면 soft delete
+            if (optionalImage.isPresent()){
+                imageEntity = optionalImage.get();
+                imageEntity.setIsDeleted(true);
+                imageRepository.save(imageEntity);
+            }
+            else if (datas.size() < 5) {
+                throw new GeneralException(ErrorCode.CAR_IMAGE_INSUFFICIENT);
+            }
+            //새로 만들어서 추가하기
+            imageEntity = ImageEntity.builder()
                     .car(carEntity)
                     .url(url)
                     .orderIdx(idx)
                     .build();
+
             imageRepository.save(imageEntity);
         }
     }
@@ -193,47 +243,5 @@ public class CarService {
     /* 중복된 차량 번호가 있는지 체크 */
     private Boolean checkDuplicateCarNumber(String carNumber) {
         return !carRepository.findByCarNumberAndIsDeletedFalse(carNumber).isEmpty();
-    }
-
-    /* 차량 삭제 */
-    @Transactional
-    public ResponseDto deleteCar(Long carId) {
-        // 차량 isDeleted = true
-        CarEntity car = carRepository.findById(carId)
-                .orElseThrow(() -> new GeneralException(ErrorCode.CAR_NOT_FOUND));
-        car.setIsDeleted(true);
-        carRepository.save(car);
-
-        // 이미지 isDeleted = true
-        imageRepository.findByCar_Id(car.getId()).forEach((image) -> {
-            image.setIsDeleted(true);
-            imageRepository.save(image);
-        });
-
-        return ResponseDto.success(HttpStatus.OK);
-    }
-
-    /* 예약 가능 날짜 수정 */
-    public ResponseDto updateDates(Long carId, DateListDto dateListDto) {
-        CarEntity car = carRepository.findById(carId)
-                // 차량 조회가 안 되는 경우
-                .orElseThrow(() -> new GeneralException(ErrorCode.CAR_NOT_FOUND));
-
-        car.setDates(dateListDto.getDates());
-        carRepository.save(car);
-
-        return ResponseDto.success(HttpStatus.ACCEPTED);
-    }
-
-    /* 차량 이미지 조회 */
-    private void updateImage(Long carId, List<String> images){
-        List<ImageEntity> carImages = imageRepository.findAllByCar_IdAndIsDeletedFalseOrderByOrderIdxAsc(carId);
-        for (int i = 0;i<carImages.size();i++) {
-            ImageEntity carImage = carImages.get(i);
-            String url = images.get(i);
-            if(!carImage.getUrl().equals(url)){
-                imageRepository.updateUrlById(carImage.getId(),url);
-            }
-        }
     }
 }
